--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#80cbc4</color>
     <color name="colorPrimaryDark">#4f9a94</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#b2fef7</color>
 </resources>
