--- a/app/src/main/res/layout/fragment_loading.xml
+++ b/app/src/main/res/layout/fragment_loading.xml
@@ -5,6 +5,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        android:layout_marginTop="8dp"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
