--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     </style>
 
     <style name="Toolbar">
+        <item name="android:textColorHint">@android:color/white</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:layout_gravity">center</item>
