--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,10 @@
         <item name="android:background">@color/colorPrimary</item>
     </style>
 
+    <style name="MySearchViewStyle" parent="Widget.AppCompat.Light.SearchView">
+
+        <item name="android:textColorHint">@color/colorWhite</item>
+
+    </style>
+
 </resources>
