--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,18 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Toolbar">
-        <item name="android:textColorHint">@android:color/white</item>
+    <style name="Toolbar" parent="MySearchViewStyle">
+        <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:layout_gravity">center</item>
-        <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
         <item name="android:background">@color/colorPrimary</item>
     </style>
 
     <style name="MySearchViewStyle" parent="Widget.AppCompat.Light.SearchView">
 
-        <item name="android:textColorHint">@color/colorWhite</item>
+        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:titleTextColor">@android:color/white</item>
 
     </style>
 
