--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -121,7 +121,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:text="@{`Blog: ` + user.blog}"
+            android:autoLink="web"
+            android:text="@{user.blog}"
             android:visibility="@{user.blog.equals(``) ? v.GONE : v.VISIBLE}"
             android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
             android:textSize="16sp"
