--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#80cbc4</color>
     <color name="colorPrimaryDark">#4f9a94</color>
-    <color name="colorAccent">#b2fef7</color>
+    <color name="colorAccent">#b2dfdb</color>
     <color name="colorWhite">#FFFFFF</color>
 </resources>
