--- a/app/src/main/res/layout/fragment_custom_alert_dialog.xml
+++ b/app/src/main/res/layout/fragment_custom_alert_dialog.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
