--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="user"
-            type="com.company.tochka.UserModel" />
+            type="com.company.tochka.model.UserModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/view"
