--- a/app/src/main/res/menu/main_activity_menu.xml
+++ b/app/src/main/res/menu/main_activity_menu.xml
@@ -7,6 +7,6 @@
         android:icon="@drawable/ic_search_white_24dp"
         android:title="search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always|collapseActionView"/>
 
 </menu>
