--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -7,7 +7,7 @@
         <import type="android.view.View"/>
         <variable
             name="user"
-            type="com.company.tochka.model.UserModel" />
+            type="com.company.tochka.model.User" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
