Добавил анимации при переходе из одной активности в другую. Исправил ошибки.

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -36,19 +36,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tool">
 
-            <ProgressBar
-                android:id="@+id/progress"
-                style="@style/Widget.AppCompat.ProgressBar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:theme="@style/Widget.AppCompat.ProgressBar" />
-
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@{user.avatarURL}"
+                app:url="@{user.avatarURL}"
                 tools:srcCompat="@tools:sample/avatars"
                 tools:ignore="ContentDescription" />
 
