--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@{user.avatarURL}"
+                app:url="@{user.avatarURL}"
                 tools:srcCompat="@tools:sample/avatars"
                 tools:ignore="ContentDescription" />
 
