--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,17 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="Toolbar" parent="MySearchViewStyle">
+    <style name="Toolbar" parent="Widget.AppCompat.Light.SearchView">
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
-
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:background">@color/colorPrimary</item>
-    </style>
-
-    <style name="MySearchViewStyle" parent="Widget.AppCompat.Light.SearchView">
-        <item name="android:textColorHint">@android:color/white</item>
-        <item name="android:titleTextColor">@android:color/white</item>
     </style>
 
 </resources>
